<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.noqfoodprototype.Activities.SignupActivity"
    android:orientation="vertical"
    android:id="@+id/fragment_signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/txt_title_criation"
        android:textSize="@dimen/title_size_small"
        android:fontFamily="serif"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15sp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:textSize="@dimen/textSize"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edt_create_emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_startEnd"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="@dimen/margin_startEnd"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/textSize"
            tools:targetApi="o" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_create_senha"
            android:textSize="@dimen/textSize"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edt_create_passwordID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_startEnd"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="@dimen/margin_startEnd"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="@dimen/textSize"
            tools:targetApi="o" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_create_confirmar"
            android:textSize="@dimen/textSize"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/edt_create_confirmID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_startEnd"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="@dimen/margin_startEnd"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="@dimen/textSize"
            tools:targetApi="o" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_createID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="@dimen/margin_startEnd"
        android:layout_marginStart="@dimen/margin_startEnd"
        android:background="@color/colorAccent"
        android:text="@string/txt_btn_create"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txt_loginID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/id_login"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/textSize"
        android:textColor="@color/colorAccent"/>


</LinearLayout>
