<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.noqfoodprototype.fragments.CadastroFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_name"
        android:textSize="@dimen/textSize"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/nomeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_startEnd"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_startEnd"
        android:hint="@string/hint_nome"
        android:importantForAutofill="no"
        android:inputType=""
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_saveCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_startEnd"
        android:layout_marginEnd="@dimen/margin_startEnd"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/txt_btn_salvar"
        android:textSize="@dimen/textSize"/>


</LinearLayout>
